--- a/app/src/main/res/layout/activity_inicio_sesion.xml
+++ b/app/src/main/res/layout/activity_inicio_sesion.xml
@@ -17,17 +17,17 @@
         app:srcCompat="@android:drawable/ic_dialog_dialer" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/login_btn_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Iniciar"
-        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
+        app:layout_constraintEnd_toEndOf="@+id/login_edt_password"
+        app:layout_constraintStart_toStartOf="@+id/login_edt_password"
+        app:layout_constraintTop_toBottomOf="@+id/login_edt_password" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/login_edt_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -40,7 +40,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName2"
+        android:id="@+id/login_edt_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -48,7 +48,7 @@
         android:inputType="textPassword"
         android:minHeight="48dp"
         android:text="123456"
-        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+        app:layout_constraintEnd_toEndOf="@+id/login_edt_user"
+        app:layout_constraintStart_toStartOf="@+id/login_edt_user"
+        app:layout_constraintTop_toBottomOf="@+id/login_edt_user" />
 </androidx.constraintlayout.widget.ConstraintLayout>
