--- a/app/src/main/res/layout/item_note_imprentas.xml
+++ b/app/src/main/res/layout/item_note_imprentas.xml
@@ -24,10 +24,10 @@
         android:id="@+id/layoutlocal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
         android:layout_weight="1"
         android:background="#4CAF50"
         android:orientation="vertical">
@@ -54,68 +54,43 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_margin="10dp"
+                    android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:gravity="bottom|center"
+                    android:gravity="center"
                     android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/textView1"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1.5"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
                         android:text="Imprenta"
-                        android:textAlignment="center"
                         android:textColor="#141717"
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/textView8"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2.2"
-                        android:text="Estado"
-                        android:textColor="@color/black"
                         android:textSize="16sp"
-                        android:textStyle="normal|bold"
-                        android:visibility="gone" />
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
                     android:layout_weight="1"
                     android:backgroundTint="#EDEBEB"
-                    android:gravity="center|left"
+                    android:gravity="center"
                     android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/item_imprenta_txt_nombre"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_weight="1.5"
+                        android:layout_weight="1"
                         android:gravity="center_horizontal|center_vertical"
                         android:text="TextView"
                         android:textColor="#F8F5F5"
                         android:textSize="16sp"
                         android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/txtEstado"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="2.2"
-                        android:text="true"
-                        android:textAlignment="textStart"
-                        android:textAllCaps="false"
-                        android:textColor="@color/white"
-                        android:textSize="16sp"
-                        android:textStyle="bold"
-                        android:visibility="gone" />
 
                 </LinearLayout>
 
