--- a/app/src/main/res/layout/item_note_tareas.xml
+++ b/app/src/main/res/layout/item_note_tareas.xml
@@ -43,7 +43,7 @@
                 android:layout_width="200dp"
                 android:layout_height="100dp"
                 android:layout_weight="1"
-                app:srcCompat="@android:drawable/ic_media_play" />
+                app:srcCompat="@android:drawable/ic_lock_idle_charging" />
 
             <LinearLayout
                 android:layout_width="match_parent"
