--- a/app/src/main/res/layout/item_note_produccion.xml
+++ b/app/src/main/res/layout/item_note_produccion.xml
@@ -64,7 +64,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:text="Imprenta"
+                        android:text="produccion"
                         android:textColor="#141717"
                         android:textSize="16sp"
                         android:textStyle="bold" />
