--- a/app/src/main/res/layout/item_note_imprentas.xml
+++ b/app/src/main/res/layout/item_note_imprentas.xml
@@ -21,7 +21,7 @@
 
 
     <LinearLayout
-        android:id="@+id/layoutlocal"
+        android:id="@+id/layoutTareas"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="5dp"
@@ -29,7 +29,7 @@
         android:layout_marginRight="5dp"
         android:layout_marginBottom="5dp"
         android:layout_weight="1"
-        android:background="#4CAF50"
+        android:background="#4FCF64"
         android:orientation="vertical">
 
         <LinearLayout
@@ -40,36 +40,16 @@
 
             <ImageView
                 android:id="@+id/imglogolocal"
-                android:layout_width="200dp"
-                android:layout_height="100dp"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
                 android:layout_weight="1"
-                app:srcCompat="@android:drawable/ic_media_play" />
+                app:srcCompat="@drawable/ic_printing" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="5dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/textView1"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:text="Imprenta"
-                        android:textColor="#141717"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -82,12 +62,22 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/item_produccion_txt_nombre"
+                        android:id="@+id/textView3"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="2"
+                        android:text="Nombre:"
+                        android:gravity="center_horizontal|center_vertical"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/item_maquina_nombre"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="center_horizontal|center_vertical"
-                        android:text="TextView"
+                        android:text="NOMBREIMPRENTA"
                         android:textColor="#F8F5F5"
                         android:textSize="16sp"
                         android:textStyle="bold" />
