--- a/app/src/main/res/layout/item_note_produccion.xml
+++ b/app/src/main/res/layout/item_note_produccion.xml
@@ -21,7 +21,7 @@
 
 
     <LinearLayout
-        android:id="@+id/layoutlocal"
+        android:id="@+id/layoutTareas"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="5dp"
@@ -82,7 +82,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/item_produccion_txt_nombre"
+                        android:id="@+id/item_produccion_txt_tarea"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
