--- a/app/src/main/res/layout/item_note_bobina.xml
+++ b/app/src/main/res/layout/item_note_bobina.xml
@@ -21,7 +21,7 @@
 
 
     <LinearLayout
-        android:id="@+id/layoutTareas"
+        android:id="@+id/layoutBobina"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="5dp"
