--- a/app/src/main/res/layout/activity_produccion.xml
+++ b/app/src/main/res/layout/activity_produccion.xml
@@ -6,14 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".activitys.Produccion_Activity">
 
+    <Button
+        android:id="@+id/produccion_btn_scrap"
+        android:layout_width="150dp"
+        android:layout_height="85dp"
+        android:layout_marginBottom="8dp"
+        android:text="Scrap"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/produccion_btn_bobina"
+        app:layout_constraintStart_toEndOf="@+id/produccion_btn_cantidad" />
+
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/produccion_recycler"
+        android:id="@+id/produccion_cantidad_recycler"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="1dp"
         android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
-        app:layout_constraintBottom_toTopOf="@+id/bobina_recycler"
+        app:layout_constraintBottom_toTopOf="@+id/produccion_bobina_recycler"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -21,31 +31,30 @@
     </androidx.recyclerview.widget.RecyclerView>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/bobina_recycler"
+        android:id="@+id/produccion_bobina_recycler"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/produccion_btn_guardar"
+        app:layout_constraintBottom_toTopOf="@+id/produccion_btn_bobina"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/produccion_recycler" />
+        app:layout_constraintTop_toBottomOf="@+id/produccion_cantidad_recycler" />
 
     <Button
-        android:id="@+id/produccion_btn_agregar"
+        android:id="@+id/produccion_btn_cantidad"
         android:layout_width="163dp"
         android:layout_height="90dp"
+        android:layout_marginStart="8dp"
         android:text="Agregar cantidad"
         app:icon="@android:drawable/ic_input_add"
-        app:layout_constraintBottom_toBottomOf="@+id/produccion_btn_guardar"
-        app:layout_constraintEnd_toStartOf="@+id/produccion_btn_guardar"
-        app:layout_constraintHorizontal_bias="0.192"
+        app:layout_constraintBottom_toBottomOf="@+id/produccion_btn_bobina"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/produccion_btn_guardar" />
+        app:layout_constraintTop_toTopOf="@+id/produccion_btn_bobina" />
 
     <Button
-        android:id="@+id/produccion_btn_guardar"
+        android:id="@+id/produccion_btn_bobina"
         android:layout_width="150dp"
         android:layout_height="85dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="Agregar Bobina"
         app:icon="@android:drawable/ic_menu_save"
