--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,9 +14,10 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="Theme.ProduccionTablet.NoActionBar">
+    <style name="Theme.ProduccionTablet.NoActionBar" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+
     </style>
 
     <style name="Theme.ProduccionTablet.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
