--- a/app/src/main/res/layout/dialog_scrap.xml
+++ b/app/src/main/res/layout/dialog_scrap.xml
@@ -46,7 +46,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
         <Button
-            android:id="@+id/btnAceptar"
+            android:id="@+id/scrap_btn_confirmar"
             android:layout_width="wrap_content"
             android:layout_height="80dp"
             android:layout_marginStart="16dp"
@@ -57,11 +57,11 @@
             app:icon="@android:drawable/ic_menu_save"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/btnCancelar"
+            app:layout_constraintStart_toEndOf="@+id/scrap_btn_cancelar"
             app:layout_constraintTop_toBottomOf="@+id/et_numero" />
 
         <Button
-            android:id="@+id/btnCancelar"
+            android:id="@+id/scrap_btn_cancelar"
             android:layout_width="wrap_content"
             android:layout_height="80dp"
             android:layout_marginStart="24dp"
@@ -71,7 +71,7 @@
             android:text="Cancelar"
             app:icon="@android:drawable/ic_menu_close_clear_cancel"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/btnAceptar"
+            app:layout_constraintEnd_toStartOf="@+id/scrap_btn_confirmar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/et_numero" />
 
