--- a/app/src/main/res/layout/activity_produccion.xml
+++ b/app/src/main/res/layout/activity_produccion.xml
@@ -12,7 +12,7 @@
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintBottom_toTopOf="@+id/produccion_btn_cancelar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"></LinearLayout>
 
@@ -77,7 +77,7 @@
         app:layout_constraintTop_toBottomOf="@+id/produccion_cantidad_recycler" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/produccion_btn_finalziar"
         android:layout_width="200dp"
         android:layout_height="80dp"
         android:layout_marginEnd="8dp"
@@ -88,7 +88,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/produccion_btn_cancelar"
         android:layout_width="200dp"
         android:layout_height="80dp"
         android:layout_marginStart="8dp"
